--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">TiendaApp</string>
+    <string name="app_name">My App</string>
+    <string name="users">Users</string>
+    <string name="categories">Categories</string>
+    <string name="products">Products</string>
+    <string name="orders">Orders</string>
 </resources>
