--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mi Aplicación</string>
+    <string name="app_name">Mi Tienda</string>
     <string name="users">Usuarios</string>
     <string name="categories">Categorías</string>
     <string name="products">Productos</string>
