--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="categories">Categories</string>
     <string name="products">Products</string>
     <string name="orders">Orders</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
+    <string name="select_image">Select Image</string>
+    <string name="submit">Submit</string>
+    <string name="add_category">Add Category</string>
 </resources>
