--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,27 @@
     <string name="deleted">Deleted</string>
     <string name="yes">Yes</string>
     <string name="delete_ticket_dialog">Are you sure you want to delete this ticket?</string>
+    <string name="users_title">Users</string>
+    <string name="no_users_available">No users available</string>
+    <string name="add_user">Add user </string>
+    <string name="user_status">User status</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="location">Location</string>
+    <string name="search">Search</string>
+    <string name="refresh">Refresh</string>
+    <string name="personal_information">Personal Info</string>
+    <string name="email">Email</string>
+    <string name="phone">Phone</string>
+    <string name="birth_date">Birth Date</string>
+    <string name="address_information">Address Info</string>
+    <string name="address">Address</string>
+    <string name="location_information">Location</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="get_current_location">Get Current Location</string>
+    <string name="status_information">Status</string>
+    <string name="user_active">Active User</string>
+    <string name="save_user">Save User</string>
+    <string name="select_this_location">Select Location</string>
 </resources>
