--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -46,5 +46,10 @@
     <string name="user_active">Usuario Activo</string>
     <string name="save_user">Guardar Usuario</string>
     <string name="select_this_location">Seleccionar</string>
+    <string name="location_not_available">Ubicación no disponible</string>
+    <string name="location_not_available_message">Este usuario no tiene una ubicación registrada.</string>
+    <string name="ok">Aceptar</string>
     </resources>
+
+
 
