--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,7 @@
     <string name="user_active">Active User</string>
     <string name="save_user">Save User</string>
     <string name="select_this_location">Select Location</string>
+    <string name="location_not_available">Location not available</string>
+    <string name="location_not_available_message">No location info for this user.</string>
+    <string name="ok">Ok</string>
 </resources>
