--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,9 @@
     <string name="location_not_available">Location not available</string>
     <string name="location_not_available_message">No location info for this user.</string>
     <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete_user">Delete User</string>
+    <string name="delete_user_dialog">Are you sure you want to delete this user?</string>
 </resources>
+
+
