--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -52,6 +52,7 @@
     <string name="cancel">Cancelar</string>
     <string name="delete_user">Borrar Usuario</string>
     <string name="delete_user_dialog">¿Estas seguro de que quieres borrar el usuario?</string>
+    <string name="edit_category">Editar Categoría</string>
     </resources>
 
 
