--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="cancel">Cancel</string>
     <string name="delete_user">Delete User</string>
     <string name="delete_user_dialog">Are you sure you want to delete this user?</string>
+    <string name="edit_category">Update Category</string>
 </resources>
 
 
