--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="delete_user">Delete User</string>
     <string name="delete_user_dialog">Are you sure you want to delete this user?</string>
     <string name="edit_category">Update Category</string>
+    <string name="product_deleted">Product Deleted</string>
 </resources>
 
 
