--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,13 @@
     <string name="delete_user_dialog">Are you sure you want to delete this user?</string>
     <string name="edit_category">Update Category</string>
     <string name="product_deleted">Product Deleted</string>
+    <string name="add_product">Add Product</string>
+    <string name="delete_product">Delete Product</string>
+    <string name="delete_product_dialog">Are you sure you want to delete this product?</string>
+    <string name="product_name">Product Name</string>
+    <string name="product_description">Description</string>
+    <string name="product_price">Price</string>
+    <string name="select">Select</string>
 </resources>
 
 
