--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -61,6 +61,7 @@
     <string name="product_description">Descripción</string>
     <string name="product_price">Precio</string>
     <string name="select">Seleccionar</string>
+    <string name="edit_product">Editar Producto</string>
 
 
 </resources>
